--- a/index.html
+++ b/index.html
@@ -6,6 +6,60 @@
     <link href="./resources/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div id=header>
+      <h1>Broadway Design</h1>
+      <p><a href="#header">Home</a></p>
+      <p><a href="#about">About</a></p>
+      <p><a href="#work">Work</a></p>
+      <p><a href="#team">Team</a></p>
+      <p><a href="#contact">Contact</a></p>
+    </div>
+
+    <div id="about">
+      <h2>Our Process</h2>
+
+      <img src="./resources/identify.svg" alt="identify-icon">
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+
+      <img src="./resources/understand.svg" alt="understand-icon">
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+
+      <img src="./resources/execute.svg" alt="execute-icon">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work</p>
+    </div>
+
+    <div id="designed">
+      <h3>Designed in New York</h3>
+    </div>
+
+    <div id="work">
+      <h3>Portfolio</h3>
+      <p>Coming soon</p>
+    </div>
+
+    <div id="team">
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </div>
+
+    <div id="contact">
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+
+    <div id="footer">
+      <p>&copy; Broadway 2016</p>
+      <a href="#header">Home</a>
+      <a href="#about">About</a>
+      <a href="#work">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
+    </div>
 
   </body>
 </html>
