replaced ids by classes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="./resources/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div id=header>
+    <div class=header>
       <h1>Broadway Design</h1>
       <p><a href="#header">Home</a></p>
       <p><a href="#about">About</a></p>
@@ -15,7 +15,7 @@
       <p><a href="#contact">Contact</a></p>
     </div>
 
-    <div id="about">
+    <div class="about">
       <h2>Our Process</h2>
 
       <img src="./resources/identify.svg" alt="identify-icon">
@@ -31,28 +31,28 @@
       <p>We put everything we have into our work</p>
     </div>
 
-    <div id="designed">
+    <div class="designed">
       <h3>Designed in New York</h3>
     </div>
 
-    <div id="work">
+    <div class="work">
       <h3>Portfolio</h3>
       <p>Coming soon</p>
     </div>
 
-    <div id="team">
+    <div class="team">
       <h3>Team</h3>
       <p>We're Hiring!</p>
     </div>
 
-    <div id="contact">
+    <div class="contact">
       <h3>Contact</h3>
       <p>Phone: (555)-555-5555</p>
       <p>E-mail: test@example.com</p>
       <p>Twitter: @test</p>
     </div>
 
-    <div id="footer">
+    <div class="footer">
       <p>&copy; Broadway 2016</p>
       <a href="#header">Home</a>
       <a href="#about">About</a>
