corrected errors in footer section

--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
     </div>
 
     <div class="footer">
-      <p>&copy; Broadway 2016</p>
+      <p>&copy; Broadway 2016
       <a href="#header">Home</a>
       <a href="#about">About</a>
       <a href="#work">Work</a>
       <a href="#team">Team</a>
       <a href="#contact">Contact</a>
+      </p>
     </div>
 
   </body>
