--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="./resources/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class=header>
+    <div class="header">
       <h1>Broadway Design</h1>
       <p><a href="#header">Home</a></p>
       <p><a href="#about">About</a></p>
